[package]
name = "xrm"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Eric Thill"]
repository = "https://github.com/thill/xrm"
description = "Cross Runtime Manager"
keywords = ["runtime"]
categories = ["concurrency","rust-patterns"]
exclude = ["Cargo.lock"]

[dependencies]
arc-swap = "1.7.1"
cron = "0.12.1"
futures = "0.3.30"
nblock = "0.3.0"
spinning_top = "0.3.0"
tokio = { version = "1.37.0", features = ["full"] }
